# flexible-list-of-values

./: README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: django.yml
compose/django/: Dockerfile
docs/: contributing.md  gen_ref_pages.py  index.md  paths.py
docs/media/: FlexibleLOVDescription.drawio
docs/overrides/: 404.html  home.html
docs/overrides/partials/: footer.html  header.html  nav.html  tabs.html
docs/usage/: getting_started.md  installation.md
flexible_list_of_values/: __init__.py  admin.py  app_settings.py  apps.py  exceptions.py  forms.py  models.py  urls.py  views.py
flexible_list_of_values/management/commands/: update_lovs.py
tests/: conftest.py  settings.py  test_forms.py  test_models.py
tests/testapp/: admin.py  forms.py  helper.py  models.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/testapp/: create_value.html  home.html  select_values.html
