[tool.poetry]
name = "flexible-list-of-values"
version = "0.2.0"
description = "Flexible Lists of Values (LOV) for Django"
authors = ["Jack Linke <jack@watervize.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flexible_list_of_values"}]

homepage = "https://github.com/jacklinke/flexible-list-of-values"
repository = "https://github.com/jacklinke/flexible-list-of-values"
keywords = ["django",]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {version = ">=22.1.0", allow-prereleases = true}
pytest = "^7"
django-extensions = "^3"
werkzeug = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
